--- a/app/src/component/layout/dashboard/fixedLeftNav/menuItem/menuItem.scss
+++ b/app/src/component/layout/dashboard/fixedLeftNav/menuItem/menuItem.scss
@@ -7,7 +7,11 @@
     flex-direction: row;
     cursor: pointer;
 
+    &:hover{
+        background-color: $NavigationMenuHover;
+    }
+
     .menuItem-icon{
-        margin: 0 10px 0 20px;
+        margin: 2px 10px 0 20px;
     }
 }
